src/components/SiteNav/SiteNav.module.css
/* SiteNav.module.css */

.header {
  width: 80%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navMenu {
  display: flex;
  list-style: none;
  transition: transform 0.3s ease;
  border-bottom: 0.5px solid white;
  padding: 0;
  line-height: 35px;
}

.navMenu li {
  margin: 0 10px;
  padding: 0 1rem;
}

img {
  margin-right: auto;
}

.navMenu a {
  color: white;
  text-decoration: none;
}

.navMenu a:hover {
  color: white;
  text-decoration: none;
  border-bottom: 3px solid white;
  padding-bottom: 5px;
  transition: border-bottom-color 1s ease;
}

.hamburger {
  display: none;
  cursor: pointer;
}

.logo {
  max-width: 350px;
  height: auto;
  margin-right: 10rem;
}

.activeLink {
  border-bottom: 3px solid white;
  padding-bottom: 5px;
  transition: border-bottom-color 0.3s ease;
}

/* Hide the menu by default on small screens */
@media (max-width: 800px) {
  .header {
    justify-content: space-between;
  }
  .navMenu {
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    background-color: white;
    position: absolute;
    top: 20%;
    height: 35%;
    background-color: white;
    box-shadow: 2px 2px 20px var(--darkGrey);
    border-radius: 5%;
  }

  .navMenu a {
    color: black;
    text-decoration: none;
    line-height: 3.5rem;
  }

  .navMenu a:hover {
    color: var(--purple);
    text-decoration: none;
    line-height: 3.5rem;
  }

  .navMenu.active {
    display: flex;
    left: 20px;
    color: gray;
    right: 30px;
  }

  .hamburger {
    display: block;
  }

  .logo {
    max-width: 250px;
    height: auto;
    margin-right: 0;
  }
  .activeLink {
    color: var(--purple);
  }
}

@media (max-width: 1050px) {
  .logo {
    max-width: 240px;
    height: auto;
    margin-right: 0;
  }
}

